# juker

./: Cargo.toml  index.html  render.yaml
.github/workflows/: gh-pages.yml
assets/: index-EW8pPnC6.js  index.00d5eb46.js  index.02cb784f.js  index.076cb713.js  index.1becb7a9.js  index.1cfbe1f0.js  index.43214972.js  index.5147a377.js  index.6a8389ce.js  index.9db3e2f6.js  index.a0fa3882.js  index.b38ba98f.js  index.cc3c4885.js  index.e6ce37e0.js  index.f32e894b.js  index.fe183d45.js  vendor.d16a216d.js  vendor.dab25925.js  vendor.de178950.js
backend/: Cargo.toml
backend/src/: env.rs  main.rs  slack.rs  state.rs  youtube.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.tsx
slack/: Cargo.toml  README.md
slack/.openapi-generator/: FILES
slack/docs/: AdminApi.md  AdminAppsApi.md  AdminAppsApprovedApi.md  AdminAppsRequestsApi.md  AdminAppsRestrictedApi.md  AdminConversationsApi.md  AdminConversationsArchiveErrorSchema.md  AdminConversationsArchiveSchema.md  AdminConversationsConvertToPrivateErrorSchema.md  AdminConversationsConvertToPrivateSchema.md  AdminConversationsCreateErrorSchema.md  AdminConversationsCreateSchema.md  AdminConversationsDeleteErrorSchema.md  AdminConversationsDeleteSchema.md  AdminConversationsDisconnectSharedErrorSchema.md  AdminConversationsEkmApi.md  AdminConversationsGetConversationPrefsSchema.md  AdminConversationsGetConversationPrefsSchemaPrefs.md  AdminConversationsGetConversationPrefsSchemaPrefsCanThread.md  AdminConversationsGetTeamsErrorSchema.md  AdminConversationsGetTeamsSchema.md  (+281 more)
(+305 files in other folders)
