[package]
name = "juker"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.18", features = ["server", "http2", "tcp"] }
slack = "0.25.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
tower = { version = "0.4.12", features = ["make"] }
tower-http = { version = "0.3.0", features = ["fs"] }
tungstenite = "0.17.2"
