[package]
name = "juker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.4"
tokio = { version = "1.18.0", features = ["full"] }
serde_json = "1.0.80"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
