[package]
name = "juker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.4", features = ["ws"] }
tokio = { version = "1.18.0", features = ["full"] }
serde_json = "1.0.80"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
serde = { version = "1.0.137", features = ["derive", "rc"] }
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
url = "2.2.2"
tower-http = { version = "0.3.2", features = ["trace"] }
chrono = "0.4.19"
futures = "0.3.21"
tokio-stream = "0.1.8"
anyhow = "1.0.57"
